--- a/admin-app/src/components/button/button.scss
+++ b/admin-app/src/components/button/button.scss
@@ -47,3 +47,10 @@
     background-color: #526e8a;
   }
 }
+
+.showDetails-button {
+  background-color: #f57c00;
+  &:hover {
+    background-color: #f44336;
+  }
+}
