--- a/admin-app/src/components/Order/OrderList.css
+++ b/admin-app/src/components/Order/OrderList.css
@@ -2,6 +2,7 @@
   background-color: #f5f5f5;
   padding: 20px;
   border-radius: 5px;
+  position: relative;
 }
 
 .order-list h2 {
@@ -42,32 +43,60 @@
   background-color: #f0f0f0;
   font-weight: bold;
 }
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7); /* Màu đen mờ */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Đảm bảo nằm trên nội dung khác */
+}
 
-.order-list .edit-button {
-  background-color: #4caf50;
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  width: 600px; /* Tăng chiều rộng nếu cần */
+  max-width: 90%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+h2 {
+  margin-bottom: 20px;
+}
+
+.modal-details {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: #f9f9f9;
+}
+
+.modal-details p {
+  margin: 5px 0;
+}
+
+.modal-details p:first-child {
+  font-weight: bold; /* Làm nổi bật ID danh sách */
+}
+
+button {
+  margin-top: 20px;
+  padding: 10px 15px;
+  background-color: #007bff;
   color: white;
   border: none;
-  padding: 8px 12px;
-  border-radius: 3px;
+  border-radius: 5px;
   cursor: pointer;
-  font-size: 0.9em;
-  margin-right: 5px;
 }
 
-.order-list .edit-button:hover {
-  background-color: #388e3c;
-}
-
-.order-list .delete-button {
-  background-color: #f44336;
-  color: white;
-  border: none;
-  padding: 8px 12px;
-  border-radius: 3px;
-  cursor: pointer;
-  font-size: 0.9em;
-}
-
-.order-list .delete-button:hover {
-  background-color: #d32f2f;
+button:hover {
+  background-color: #0056b3;
 }
