--- a/admin-app/src/components/Order/OrderList.css
+++ b/admin-app/src/components/Order/OrderList.css
@@ -1,49 +1,50 @@
+@charset "UTF-8";
 .order-list {
   background-color: #f5f5f5;
   padding: 20px;
   border-radius: 5px;
   position: relative;
 }
-
 .order-list h2 {
   color: #333;
   margin-top: 0;
   margin-bottom: 20px;
 }
-
-.order-list .create-button {
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  padding: 10px 15px;
+.order-list .form {
+  max-width: 600px;
+  background-color: #303f9f;
+  padding: 20px;
+  margin: auto;
+  position: absolute;
+  left: 25%;
+  top: 10%;
   border-radius: 5px;
-  cursor: pointer;
-  font-size: 1em;
-  margin-bottom: 20px;
 }
-
-.order-list .create-button:hover {
-  background-color: #388e3c;
+.order-list .form label {
+  color: #fff;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
-
 .order-list table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 10px;
 }
-
-.order-list th,
-.order-list td {
+.order-list table thead tr th {
+  background-color: #f0f0f0;
+  font-weight: bold;
   border: 1px solid #ddd;
   padding: 10px;
   text-align: left;
 }
-
-.order-list th {
+.order-list table tbody tr td {
   background-color: #f0f0f0;
   font-weight: bold;
+  border: 1px solid #ddd;
+  padding: 10px;
+  text-align: left;
 }
-.modal-overlay {
+.order-list .modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -53,10 +54,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000; /* Đảm bảo nằm trên nội dung khác */
 }
-
-.modal-content {
+.order-list .modal-overlay .modal-content {
   background: white;
   padding: 20px;
   border-radius: 5px;
@@ -64,12 +63,10 @@
   max-width: 90%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-
-h2 {
+.order-list .modal-overlay .modal-content h2 {
   margin-bottom: 20px;
 }
-
-.modal-details {
+.order-list .modal-overlay .modal-content .modal-details {
   display: flex;
   flex-direction: column;
   margin-bottom: 15px;
@@ -78,16 +75,13 @@ h2 {
   padding: 10px;
   background-color: #f9f9f9;
 }
-
-.modal-details p {
+.order-list .modal-overlay .modal-content .modal-details p {
   margin: 5px 0;
 }
-
-.modal-details p:first-child {
-  font-weight: bold; /* Làm nổi bật ID danh sách */
+.order-list .modal-overlay .modal-content .modal-details p:first-child {
+  font-weight: bold;
 }
-
-button {
+.order-list .modal-overlay .modal-content button {
   margin-top: 20px;
   padding: 10px 15px;
   background-color: #007bff;
@@ -96,7 +90,8 @@ button {
   border-radius: 5px;
   cursor: pointer;
 }
-
-button:hover {
+.order-list .modal-overlay .modal-content button:hover {
   background-color: #0056b3;
 }
+
+/*# sourceMappingURL=OrderList.css.map */
