--- a/admin-app/src/components/DishList/Dishlist.scss
+++ b/admin-app/src/components/DishList/Dishlist.scss
@@ -19,6 +19,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px; /* giúp form không dính sát mép */
+    overflow-y: auto; /* cho phép cuộn khi form dài */
     z-index: 1000;
     .create-dish-form {
       background-color: white;
@@ -27,6 +29,8 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       width: 80%;
       max-width: 600px;
+      max-height: 90vh; /* giới hạn chiều cao */
+      overflow-y: auto; /* cuộn riêng trong form */
       h1 {
         font-size: 25px;
         text-align: center;
@@ -39,6 +43,10 @@
             margin-bottom: 5px;
             font-weight: bold;
             color: #555;
+            .imageUrl {
+              display: "flex";
+              margin-bottom: 5px;
+            }
           }
           input[type="text"] {
             width: 100%;
@@ -56,6 +64,12 @@
             box-sizing: border-box;
             font-size: 1em;
           }
+          img {
+            width: 60px;
+            height: 60px;
+            object-fit: cover;
+            border: 1px solid #ccc;
+          }
           textarea {
             width: 100%;
             padding: 10px;
@@ -71,6 +85,15 @@
           justify-content: flex-end;
           gap: 10px;
           margin-top: 20px;
+          .save-button {
+            background-color: green;
+            padding: 10px;
+            color: #fff;
+            border-radius: 4px;
+            &:hover {
+              background-color: #2dde71;
+            }
+          }
         }
       }
     }
