--- a/admin-app/src/components/User/user.scss
+++ b/admin-app/src/components/User/user.scss
@@ -120,5 +120,11 @@
         }
       }
     }
+    .save-button {
+      padding: 6px 10px 7.5px 10px;
+      border-radius: 4px;
+      margin: 2px;
+      color: #fff;
+    }
   }
 }
