--- a/admin-app/src/components/Category/category.scss
+++ b/admin-app/src/components/Category/category.scss
@@ -69,6 +69,11 @@
           justify-content: flex-end;
           gap: 10px;
           margin-top: 20px;
+          .save-button {
+            padding: 10px;
+            border-radius: 4px;
+            color: #fff;
+          }
         }
       }
     }
