--- a/admin-app/src/components/button/button.scss
+++ b/admin-app/src/components/button/button.scss
@@ -54,3 +54,8 @@
     background-color: #f44336;
   }
 }
+.deactivate-button {
+  background-color: #6c757d;
+  padding: 6px 12px;
+  color: #fff;
+}
