--- a/app-frontend/src/modules/Storefont/components/pages/dashboard/header/styles.scss
+++ b/app-frontend/src/modules/Storefont/components/pages/dashboard/header/styles.scss
@@ -77,7 +77,7 @@ $breakpoint-desktop: 1024px;
     transform: translateX(-20px);
     a {
       &:hover {
-        color: darken(#333, 20%);
+        color:#333;
       }
     }
   }
