--- a/app-frontend/src/modules/Storefont/components/pages/dashboard/styles.scss
+++ b/app-frontend/src/modules/Storefont/components/pages/dashboard/styles.scss
@@ -47,7 +47,7 @@ $breakpoint-desktop: 1024px;
       cursor: $cursor;
       transition: background-color 0.3s ease; 
       &:hover {
-        background-color: darken($primary-color, 10%); 
+        background-color: black; 
       }
     }
   }
